[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menus/StartMenu.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/gear.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.164706, 0.164706, 0.164706, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[node name="StartMenu" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="."]
self_modulate = Color( 1, 0.568627, 0.4, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -216.0
margin_top = 87.0
margin_right = 216.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 1 )
text = "PewPewPew"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -118.5
margin_top = -25.5
margin_right = 118.5
margin_bottom = 25.5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.92549, 0.192157, 0.192157, 1 )
custom_colors/font_color_pressed = Color( 0.337255, 0, 0, 1 )
text = "Start"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton2" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -118.5
margin_top = 139.5
margin_right = 118.5
margin_bottom = 190.5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.92549, 0.192157, 0.192157, 1 )
custom_colors/font_color_pressed = Color( 0.337255, 0, 0, 1 )
text = "Start"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -48.0
margin_top = -45.0
icon = ExtResource( 3 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="Popup" parent="."]
anchor_left = 0.1
anchor_top = 0.6
anchor_right = 0.9
anchor_bottom = 0.9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="CheckButton" parent="Popup"]
margin_right = 76.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 4 )
text = "analog joystick"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="StartButton2" to="." method="_on_StartButton2_pressed"]
[connection signal="pressed" from="OptionButton" to="." method="_on_OptionButton_pressed"]
[connection signal="pressed" from="Popup/CheckButton" to="." method="_on_CheckButton_pressed"]
